--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,5 @@
-h2.intro {
+.intro {
   color: red;
   padding: 5px;
   font-size: 52;
-}
-
-p.intro {
-  color: red;
-  background-color: yellow;
-  padding: 5px;
-}
-
-img.intro {
-  color: red;
-  background-color: green;
-  padding: 5px;
 }
